updated hero section, added css variables

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
   </head>
 
   <body>
-    <h1>hello world</h1>
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <h1>Allegra Brooks</h1>
+      <h2 class="mb-5 mt-5">
+        Graphic Designer and Front-End Developer Based in New York City
+      </h2>
+      <p>Select digital works</p>
+    </div>
   </body>
 </html>
