--- a/index.html
+++ b/index.html
@@ -29,8 +29,82 @@
       <h2 class="mb-5 mt-5">
         Graphic Designer and Front-End Developer Based in New York City
       </h2>
-      <p>Select digital works</p>
-      <hr />
+      <h3>Select digital works</h3>
+    </div>
+    <hr />
+
+    <div class="container project-container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            src="images/TadanoriYokooLandingPage.png"
+            class="img-fluid"
+            alt="Image of a Tadanori Yokoo work"
+          />
+        </div>
+        <div class="col-lg project-description">
+          <div class="row">
+            <div class="col-sm-1">
+              <h3 class="project-number">01</h3>
+            </div>
+            <div class="col-lg">
+              <h3>Tadanori Yokoo Landing Page</h3>
+              <p>Built with basic HTML and CSS.</p>
+              <a href="" class="btn btn-branding mt-5">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+
+    <div class="container project-container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            src="images/WeatherApp.png"
+            class="img-fluid"
+            alt="Image of weather app"
+          />
+        </div>
+        <div class="col-lg project-description">
+          <div class="row">
+            <div class="col-sm-1">
+              <h3 class="project-number">02</h3>
+            </div>
+            <div class="col-lg">
+              <h3>Weather App</h3>
+              <p>Built with advanced HTML, CSS, JavaScript, Github, and API.</p>
+              <a href="" class="btn btn-branding mt-5">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+
+    <div class="container project-container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img
+            src="images/CafeStudioHomepage.png"
+            class="img-fluid"
+            alt="Image of Cafe Studio's landing page"
+          />
+        </div>
+        <div class="col-lg project-description">
+          <div class="row">
+            <div class="col-sm-1">
+              <h3 class="project-number">03</h3>
+            </div>
+            <div class="col-lg">
+              <h3>Cafe Studio Website Design</h3>
+              <p>Designed using Figma.</p>
+              <a href="" class="btn btn-branding mt-5">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
