update css: accent color-a, hero h3, h2 font size, h1 margin

--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/TadanoriYokooLandingPage.png"
+            src="images/about.JPG"
             class="img-fluid"
-            alt="allegra brooks logo image"
+            alt="abstract image"
           />
         </div>
         <div class="col-lg about-description">
@@ -41,7 +41,7 @@
             <div class="col-lg">
               <p>Allegra Brooks is a Graphic Designer and Front-End Developer, currently based in New York City, with a knowledge in CSS, advanced HTML, and JavaScript, using Bootstrap, CodeSandbox, Netlify, and Github.</p>
             </br>
-            <p><span class="view-more">View more graphic design work at</span></br><a href="https://www.allegrabrooks.com/" target="_blank">allegrabrooks.com</a></p>
+            <p><span class="view-more">View more graphic design work at</span></br><a href="https://www.allegrabrooks.com/" target="_blank" class="website-link">allegrabrooks.com</a></p>
             </div>
           </div>
         </div>
