updated btn-branding margin, consolidated container classes, set up work.html page

--- a/work.html
+++ b/work.html
@@ -22,18 +22,12 @@
       crossorigin="anonymous"
     ></script>
   </head>
-
   <body>
     <div class="hero">
-      <h2>Allegra Brooks</h2>
-      <h1 class="mb-5 mt-4">
-        Graphic Designer and Front-End Developer Based in New York City
-      </h1>
-      <h3>Select digital works</h3>
+      <h1 class="mb-5 mt-5">Digital Work</h1>
     </div>
     <hr />
-
-    <div class="container content-container">
+ <div class="container content-container">
       <div class="row">
         <div class="col-sm-4">
           <img
@@ -49,8 +43,8 @@
             </div>
             <div class="col-lg">
               <h3>Tadanori Yokoo Landing Page</h3>
-              <p>Built with basic HTML and CSS.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
+              <p>Mock landing page made with basic knowledge of HTML, CSS and JavaScript. Final project upon completion of SheCodes Basics.</p>
+              <a href="" class="btn btn-branding">View Project</a>
             </div>
           </div>
         </div>
@@ -74,8 +68,8 @@
             </div>
             <div class="col-lg">
               <h3>Weather App</h3>
-              <p>Built with advanced HTML, CSS, JavaScript, Github, and API.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
+              <p>A real-time weather application made by integrating live API and advanced front-end programs such as HTML, CSS, Bootstrap and JavaScript. Final project upon completion of SheCodes Plus.</p>
+              <a href="https://dazzling-bose-769cea.netlify.app/" class="btn btn-branding" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -99,12 +93,16 @@
             </div>
             <div class="col-lg">
               <h3>Cafe Studio Website Design</h3>
-              <p>Designed using Figma.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
+              <p>Live website redesign for SoHo-based photography studio, Cafe Studio, using Figma. View more <a href= "https://www.allegrabrooks.com/design/web-design" target="_blank" class="website-link">here</a>.</br>
+                *This project was done prior to SheCodes education.</p>
+              <a href="" class="btn btn-branding">Visit Cafe Studio</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </body>
+</html>
+
   </body>
 </html>
