--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <h1 class="mb-5 mt-5">About</h1>
     </div>
     <hr />
-<div class="container about-container">
+<div class="container content-container">
       <div class="row">
         <div class="col-sm-4">
           <img
