updated links on work.html

--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
             <div class="col-lg">
               <h3>Tadanori Yokoo Landing Page</h3>
               <p>Mock landing page made with basic knowledge of HTML, CSS and JavaScript. Final project upon completion of SheCodes Basics.</p>
-              <a href="" class="btn btn-branding">View Project</a>
+              <a href="https://jovial-nobel-3346e1.netlify.app/" class="btn btn-branding" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
               <h3>Cafe Studio Website Design</h3>
               <p>Live website redesign for SoHo-based photography studio, Cafe Studio, using Figma. View more <a href= "https://www.allegrabrooks.com/design/web-design" target="_blank" class="website-link">here</a>.</br>
                 *This project was done prior to SheCodes education.</p>
-              <a href="" class="btn btn-branding">Visit Cafe Studio</a>
+              <a href="https://www.cafestudionyc.com/" class="btn btn-branding" target="_blank">Visit Cafe Studio</a>
             </div>
           </div>
         </div>
