added contact.html page

--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,14 @@
     </div>
     <hr />
 <div class="container content-container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/about.JPG"
-            class="img-fluid"
-            alt="abstract image"
-          />
-        </div>
-        <div class="col-lg about-description">
-          <div class="row">
-            <div class="col-lg">
-              <p>Allegra Brooks is a Graphic Designer and Front-End Developer, currently based in New York City, with a knowledge in CSS, advanced HTML, and JavaScript, using Bootstrap, CodeSandbox, Netlify, and Github.</p>
-            </br>
+        <div class="col-lg contact-description">
+            <h3>Let's work together.</h3>
+              <p>Feel free to reach out to <a href="mailto:allegra.brooks@gmail.com" class="link">allegra.brooks@gmail.com</a>
+                for more information or collaborations. 
+              </br>
+                You can also find me on <a href="https://www.instagram.com/allegra.brooks/" target="_blank" class="link"> Instagram</a> / 
+                <a href="https://www.linkedin.com/in/allegra-b-24362015b/" target="_blank" class="link"> LinkedIn</a> / 
+                <a href="https://github.com/abg803" target="_blank" class="link"> Github</a></p>
             <p><span class="view-more">View more graphic design work at</span></br><a href="https://www.allegrabrooks.com/" target="_blank" class="link">allegrabrooks.com</a></p>
             </div>
           </div>
