added h3 to hero section

--- a/work.html
+++ b/work.html
@@ -25,6 +25,7 @@
   <body>
     <div class="hero">
       <h1 class="mb-5 mt-5">Digital Work</h1>
+      <h3>Select works</h3>
     </div>
     <hr />
  <div class="container content-container">
