--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="hero">
-      <h1 class="mb-5 mt-5">About</h1>
+      <h1 class="mb-5 mt-5">Contact</h1>
     </div>
     <hr />
 <div class="container content-container">
