added top nav to homepage

--- a/index.html
+++ b/index.html
@@ -24,8 +24,35 @@
   </head>
 
   <body>
+    <div class="container nav-container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="images/logoFull.png"
+            class="logo d-none d-md-block"
+            alt="Allegra Brooks logo full version"
+          />
+          <img
+            src="images/logoSmall.png"
+            class="logo d-block d-md-none"
+            alt="Allegra Brooks logo avatar version"
+          />
+        </a>
+
+        <ul>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
-      <h2>Allegra Brooks</h2>
       <h1 class="mb-5 mt-4">
         Graphic Designer and Front-End Developer Based in New York City
       </h1>
