--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/1ed9e2f8e2.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
 
   <body>
@@ -38,7 +34,6 @@
             alt="Allegra Brooks logo avatar version"
           />
         </a>
-
         <ul>
           <li>
             <a href="/work.html">Work</a>
@@ -133,5 +128,20 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>
+        Coded and designed by
+        <a href="allegrabrooks.com" class="link" target="_blank"
+          >Allegra Brooks</a
+        >
+        and open-sourced on
+        <a
+          href="https://github.com/abg803/portfolio-project"
+          class="link"
+          target="_blank"
+          >Github</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
