updated footer and body css margins and position

--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
     ></script>
   </head>
   <body>
+      <div class="container">
+      <div class="content-wrap">
     <div class="hero">
       <h1 class="mb-5 mt-5">About</h1>
     </div>
@@ -43,6 +45,22 @@
         </div>
       </div>
     </div>
-
+    </div>
+<footer>
+        <p>
+          Coded and designed by
+          <a href="allegrabrooks.com" class="link" target="_blank"
+            >Allegra Brooks</a
+          >
+          and open-sourced on
+          <a
+            href="https://github.com/abg803/portfolio-project"
+            class="link"
+            target="_blank"
+            >Github</a
+          >
+        </p>
+      </footer>
+      </div>
   </body>
 </html>
