--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,16 @@
     ></script>
   </head>
   <body>
-    <div class="hero">
-      <h1 class="mb-5 mt-5">Contact</h1>
-    </div>
+    <div class="container">
+      <div class="content-wrap">
+        <div class="hero">
+            <h1 class="mb-5 mt-5">Contact</h1>
+        </div>
     <hr />
-<div class="container content-container">
+        <div class="container content-container">
         <div class="col-lg contact-description">
             <h3>Let's work together.</h3>
-              <p>Feel free to reach out to <a href="mailto:allegra.brooks@gmail.com" class="link">allegra.brooks@gmail.com</a>
+              <p>Feel free to <a href="mailto:allegra.brooks@gmail.com" class="link">reach out</a>
                 for more information or collaborations. 
               </br>
                 You can also find me on <a href="https://www.instagram.com/allegra.brooks/" target="_blank" class="link"> Instagram</a> / 
@@ -36,8 +38,17 @@
             </div>
           </div>
         </div>
-      </div>
+    <footer>
+        <p>
+          Coded and designed by
+          <a href="allegrabrooks.com" class="link" target="_blank">Allegra Brooks</a>
+          and open-sourced on <a
+            href="https://github.com/abg803/portfolio-project"
+            class="link"
+            target="_blank"
+            >Github</a>
+        </p>
+      </footer>
     </div>
-
   </body>
 </html>
