--- a/index.html
+++ b/index.html
@@ -20,128 +20,134 @@
   </head>
 
   <body>
-    <div class="container nav-container">
-      <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img
-            src="images/logoFull.png"
-            class="logo d-none d-md-block"
-            alt="Allegra Brooks logo full version"
-          />
-          <img
-            src="images/logoSmall.png"
-            class="logo d-block d-md-none"
-            alt="Allegra Brooks logo avatar version"
-          />
-        </a>
-        <ul>
-          <li>
-            <a href="/work.html">Work</a>
-          </li>
-          <li>
-            <a href="/about.html">About</a>
-          </li>
-          <li>
-            <a href="/contact.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <div class="hero">
-      <h1 class="mb-5 mt-4">
-        Graphic Designer and Front-End Developer Based in New York City
-      </h1>
-      <h3>Select digital works</h3>
-    </div>
-    <hr />
-
-    <div class="container content-container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/TadanoriYokooLandingPage.png"
-            class="img-fluid"
-            alt="Image of a Tadanori Yokoo work"
-          />
+    <div class="container">
+      <div class="content-wrap">
+        <div class="container nav-container">
+          <nav class="d-flex justify-content-between">
+            <a href="/">
+              <img
+                src="images/logoFull.png"
+                class="logo d-none d-md-block"
+                alt="Allegra Brooks logo full version"
+              />
+              <img
+                src="images/logoSmall.png"
+                class="logo d-block d-md-none"
+                alt="Allegra Brooks logo avatar version"
+              />
+            </a>
+            <ul>
+              <li>
+                <a href="/work.html">Work</a>
+              </li>
+              <li>
+                <a href="/about.html">About</a>
+              </li>
+              <li>
+                <a href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <div class="col-lg project-description">
+        <div class="hero">
+          <h1 class="mb-5 mt-4">
+            Graphic Designer and Front-End Developer Based in New York City
+          </h1>
+          <h3>Select digital works</h3>
+        </div>
+        <hr />
+
+        <div class="container content-container">
           <div class="row">
-            <div class="col-sm-1">
-              <h3 class="project-number">01</h3>
+            <div class="col-sm-4">
+              <img
+                src="images/TadanoriYokooLandingPage.png"
+                class="img-fluid"
+                alt="Image of a Tadanori Yokoo work"
+              />
             </div>
-            <div class="col-lg">
-              <h3>Tadanori Yokoo Landing Page</h3>
-              <p>Built with basic HTML and CSS.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
+            <div class="col-lg project-description">
+              <div class="row">
+                <div class="col-sm-1">
+                  <h3 class="project-number">01</h3>
+                </div>
+                <div class="col-lg">
+                  <h3>Tadanori Yokoo Landing Page</h3>
+                  <p>Built with basic HTML and CSS.</p>
+                  <a href="" class="btn btn-branding">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+
+        <div class="container content-container">
+          <div class="row">
+            <div class="col-sm-4">
+              <img
+                src="images/WeatherApp.png"
+                class="img-fluid"
+                alt="Image of weather app"
+              />
+            </div>
+            <div class="col-lg project-description">
+              <div class="row">
+                <div class="col-sm-1">
+                  <h3 class="project-number">02</h3>
+                </div>
+                <div class="col-lg">
+                  <h3>Weather App</h3>
+                  <p>
+                    Built with advanced HTML, CSS, JavaScript, Github, and API.
+                  </p>
+                  <a href="" class="btn btn-branding">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+
+        <div class="container content-container">
+          <div class="row">
+            <div class="col-sm-4">
+              <img
+                src="images/CafeStudioHomepage.png"
+                class="img-fluid"
+                alt="Image of Cafe Studio's landing page"
+              />
+            </div>
+            <div class="col-lg project-description">
+              <div class="row">
+                <div class="col-sm-1">
+                  <h3 class="project-number">03</h3>
+                </div>
+                <div class="col-lg">
+                  <h3>Cafe Studio Website Design</h3>
+                  <p>Designed using Figma.</p>
+                  <a href="" class="btn btn-branding">Learn More</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <footer>
+        <p>
+          Coded and designed by
+          <a href="allegrabrooks.com" class="link" target="_blank"
+            >Allegra Brooks</a
+          >
+          and open-sourced on
+          <a
+            href="https://github.com/abg803/portfolio-project"
+            class="link"
+            target="_blank"
+            >Github</a
+          >
+        </p>
+      </footer>
     </div>
-    <hr />
-
-    <div class="container content-container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/WeatherApp.png"
-            class="img-fluid"
-            alt="Image of weather app"
-          />
-        </div>
-        <div class="col-lg project-description">
-          <div class="row">
-            <div class="col-sm-1">
-              <h3 class="project-number">02</h3>
-            </div>
-            <div class="col-lg">
-              <h3>Weather App</h3>
-              <p>Built with advanced HTML, CSS, JavaScript, Github, and API.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr />
-
-    <div class="container content-container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/CafeStudioHomepage.png"
-            class="img-fluid"
-            alt="Image of Cafe Studio's landing page"
-          />
-        </div>
-        <div class="col-lg project-description">
-          <div class="row">
-            <div class="col-sm-1">
-              <h3 class="project-number">03</h3>
-            </div>
-            <div class="col-lg">
-              <h3>Cafe Studio Website Design</h3>
-              <p>Designed using Figma.</p>
-              <a href="" class="btn btn-branding">Learn More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p>
-        Coded and designed by
-        <a href="allegrabrooks.com" class="link" target="_blank"
-          >Allegra Brooks</a
-        >
-        and open-sourced on
-        <a
-          href="https://github.com/abg803/portfolio-project"
-          class="link"
-          target="_blank"
-          >Github</a
-        >
-      </p>
-    </footer>
   </body>
 </html>
