--- a/work.html
+++ b/work.html
@@ -19,6 +19,8 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <div class="content-wrap">
     <div class="hero">
       <h1 class="mb-5 mt-5">Digital Work</h1>
       <h3>Select works</h3>
@@ -90,7 +92,7 @@
             </div>
             <div class="col-lg">
               <h3>Cafe Studio Website Design</h3>
-              <p>Live website redesign for SoHo-based photography studio, Cafe Studio, using Figma. View more <a href= "https://www.allegrabrooks.com/design/web-design" target="_blank" class="website-link">here</a>.</br>
+              <p>Live website redesign for SoHo-based photography studio, Cafe Studio, using Figma. View more <a href= "https://www.allegrabrooks.com/design/web-design" target="_blank" class="link">here</a>.</br>
                 *This project was done prior to SheCodes education.</p>
               <a href="https://www.cafestudionyc.com/" class="btn btn-branding" target="_blank">Visit Cafe Studio</a>
             </div>
@@ -98,8 +100,22 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
-
+    </div>
+    <footer>
+        <p>
+          Coded and designed by
+          <a href="allegrabrooks.com" class="link" target="_blank"
+            >Allegra Brooks</a
+          >
+          and open-sourced on
+          <a
+            href="https://github.com/abg803/portfolio-project"
+            class="link"
+            target="_blank"
+            >Github</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
