--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Allegra is a professional graphic designer and trained front-end engineer based in New York City"
+    />
+    <title>Front-End Developer and Graphic Designer - Allegra Brooks</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,8 +23,35 @@
     ></script>
   </head>
   <body>
-    <div class="container">
+    <div class="page-container">
       <div class="content-wrap">
+          <div class="container nav-container">
+          <nav class="d-flex justify-content-between">
+            <a href="/" title="Homepage">
+              <img
+                src="images/logoFull.png"
+                class="logo d-none d-md-block"
+                alt="Allegra Brooks logo full version"
+              />
+              <img
+                src="images/logoSmall.png"
+                class="logo d-block d-md-none"
+                alt="Allegra Brooks logo avatar version"
+              />
+            </a>
+            <ul>
+              <li>
+                <a href="/work.html" title="Allegra's work">Work</a>
+              </li>
+              <li>
+                <a href="/about.html" title="About Allegra">About</a>
+              </li>
+              <li>
+                <a href="/contact.html" title="Contact Allegra" class="active">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
         <div class="hero">
             <h1 class="mb-5 mt-5">Contact</h1>
         </div>
