--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Allegra is a professional graphic designer and trained front-end engineer based in New York City"
+    />
+    <title>Front-End Developer and Graphic Designer - Allegra Brooks</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,11 +24,11 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="page-container">
       <div class="content-wrap">
         <div class="container nav-container">
           <nav class="d-flex justify-content-between">
-            <a href="/">
+            <a href="/" title="Homepage">
               <img
                 src="images/logoFull.png"
                 class="logo d-none d-md-block"
@@ -38,13 +42,13 @@
             </a>
             <ul>
               <li>
-                <a href="/work.html">Work</a>
+                <a href="/work.html" title="Allegra's work">Work</a>
               </li>
               <li>
-                <a href="/about.html">About</a>
+                <a href="/about.html" title="About Allegra">About</a>
               </li>
               <li>
-                <a href="/contact.html">Contact</a>
+                <a href="/contact.html" title="Contact Allegra">Contact</a>
               </li>
             </ul>
           </nav>
