--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <hr />
 
-        <div class="container content-container">
+        <div class="container content-container mb-5">
           <div class="row">
             <div class="col-sm-4">
               <img
