--- a/work.html
+++ b/work.html
@@ -107,7 +107,7 @@
     </div>
     <hr />
 
-    <div class="container content-container">
+    <div class="container content-container mb-5">
       <div class="row">
         <div class="col-sm-4">
           <img
