--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h1 class="mb-5 mt-4">
             Graphic Designer and Front-End Developer Based in New York City
           </h1>
-          <h3>Select digital works</h3>
+          <h3>Selected digital works</h3>
         </div>
         <hr />
 
