--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
         </div>
     <div class="hero">
       <h1 class="mb-5 mt-5">Digital Work</h1>
-      <h3>Select works</h3>
+      <h3>Selected works</h3>
     </div>
     <hr />
  <div class="container content-container">
