update links on index.html page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg">
                   <h3>Tadanori Yokoo Landing Page</h3>
                   <p>Built with basic HTML and CSS.</p>
-                  <a href="" class="btn btn-branding">Learn More</a>
+                  <a href="/work.html" class="btn btn-branding">Learn More</a>
                 </div>
               </div>
             </div>
@@ -105,7 +105,7 @@
                   <p>
                     Built with advanced HTML, CSS, JavaScript, Github, and API.
                   </p>
-                  <a href="" class="btn btn-branding">Learn More</a>
+                  <a href="/work.html" class="btn btn-branding">Learn More</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                 <div class="col-lg">
                   <h3>Cafe Studio Website Design</h3>
                   <p>Designed using Figma.</p>
-                  <a href="" class="btn btn-branding">Learn More</a>
+                  <a href="/work.html" class="btn btn-branding">Learn More</a>
                 </div>
               </div>
             </div>
