--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Allegra is a professional graphic designer and trained front-end engineer based in New York City"
+      content="About Allegra - Allegra is a professional graphic designer and trained front-end engineer based in New York City"
     />
-    <title>Front-End Developer and Graphic Designer - Allegra Brooks</title>
+    <title>About Allegra - Front-End Developer and Graphic Designer - Allegra Brooks</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
