updated footer link

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
     <footer>
         <p>
           Coded and designed by
-          <a href="allegrabrooks.com" class="link" target="_blank">Allegra Brooks</a>
+          <a href="https://www.allegrabrooks.com" class="link" target="_blank">Allegra Brooks</a>
           and open-sourced on <a
             href="https://github.com/abg803/portfolio-project"
             class="link"
