--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <footer>
         <p>
           Coded and designed by
-          <a href="allegrabrooks.com" class="link" target="_blank"
+          <a href="https://www.allegrabrooks.com" class="link" target="_blank"
             >Allegra Brooks</a
           >
           and open-sourced on
