--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-lg">
               <h3>Tadanori Yokoo Landing Page</h3>
-              <p>Mock landing page made with basic knowledge of HTML, CSS and JavaScript. Final project upon completion of SheCodes Basics.</p>
+              <p>Mock landing page made with basic knowledge of HTML, CSS and JavaScript.</p>
               <a href="https://jovial-nobel-3346e1.netlify.app/" class="btn btn-branding" target="_blank">View Project</a>
             </div>
           </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg">
               <h3>Weather App</h3>
-              <p>A real-time weather application made by integrating live API and advanced front-end programs such as HTML, CSS, Bootstrap and JavaScript. Final project upon completion of SheCodes Plus.</p>
+              <p>A real-time weather application made by integrating live API and advanced front-end programs such as HTML, CSS, Bootstrap and JavaScript.</p>
               <a href="https://dazzling-bose-769cea.netlify.app/" class="btn btn-branding" target="_blank">View Project</a>
             </div>
           </div>
@@ -135,7 +135,7 @@
     <footer>
         <p>
           Coded and designed by
-          <a href="allegrabrooks.com" class="link" target="_blank"
+          <a href="https://www.allegrabrooks.com" class="link" target="_blank"
             >Allegra Brooks</a
           >
           and open-sourced on
