--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 <footer>
         <p>
           Coded and designed by
-          <a href="allegrabrooks.com" class="link" target="_blank"
+          <a href="https://www.allegrabrooks.com" class="link" target="_blank"
             >Allegra Brooks</a
           >
           and open-sourced on
